objects/ASI_eForm_HA_Detail__c.object
<CustomObject>
    <description>Home Appliance Detail</description>
    <fields>
        <fullName>ASI_eForm_Home_Appliance__c</fullName>
        <description>Home Appliance Master Child Relationship</description>
        <label>Home Appliance Request</label>
        <referenceTo>ASI_eForm_Home_Appliance__c</referenceTo>
        <relationshipLabel>Home Appliance Details</relationshipLabel>
        <relationshipName>Home_Appliance_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Item_Name__c</fullName>
        <description>Item Name</description>
        <label>Item Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Model_No__c</fullName>
        <description>Model No</description>
        <label>Model No</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Price__c</fullName>
        <description>Price</description>
        <label>Price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Home Appliance Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HAL-{000000}</displayFormat>
        <label>Home Appliance Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Home Appliance Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_HA_Detail</fullName>
        <active>true</active>
        <label>KR Home Appliance</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>